--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,22 @@
 [build-system]
-requires = ["flit_core >=2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools >= 77.0.3"]
+build-backend = "setuptools.build_meta"
 
-[tool.flit.metadata]
-module = "comics"
-dist-name = "comics"
-author = "Ira Horecka"
-author-email = "ira89@icloud.com"
-home-page = "https://github.com/irahorecka/comics"
-description-file = "README.md"
+[project]
+name = "comics"
+dynamic = ["version"]
+description = "GoComics API wrapper"
+readme = "README.md"
+requires-python = ">=3.8"
+authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
+license = { text = "MIT" }
+dependencies = [
+    "beautifulsoup4>=4.11.0",
+    "ipython>=8.5.0",
+    "Pillow>=9.2.0",
+    "python-dateutil>=2.8.0",
+    "requests>=2.28.0"
+]
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
@@ -19,7 +27,12 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries",
-    "Topic :: Utilities",
+    "Topic :: Utilities"
 ]
-requires-python = ">=3.8"
-requires = ["beautifulsoup4>=4.11.0", "ipython>=8.5.0", "Pillow>=9.2.0", "python-dateutil>=2.8.0", "requests>=2.28.0"]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["comics"]
+
+[tool.setuptools.dynamic]
+version = { attr = "comics.__version__" }
