--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "GoComics API wrapper"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
-license = { text = "MIT" }
+license = "MIT"
 license-files = ["LICENSE"]
 dependencies = [
     "beautifulsoup4>=4.11.0",
@@ -20,7 +20,6 @@ dependencies = [
 ]
 classifiers = [
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
