--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -e . > /dev/null
         pip install -r requirements.txt -r requirements-dev.txt
 
     - name: Test with pytest
