--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -e . > /dev/null
+        python -m pip install --upgrade pip        
         pip install -r requirements.txt -r requirements-dev.txt
 
     - name: Test with pytest
-      run: pytest -W ignore -vv .
+      run: |
+        pip install -e .
+        pytest -W ignore -vv .
