--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,6 @@ description = "GoComics API wrapper"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
-license = "MIT"
-license-files = ["LICENSE"]
 dependencies = [
     "beautifulsoup4>=4.11.0",
     "ipython>=8.5.0",
@@ -29,6 +27,12 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: Utilities"
 ]
+
+[project.license]
+text = "MIT"
+
+[project.urls]
+"Homepage" = "https://github.com/irahorecka/comics"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
