--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,7 @@ jobs:
 
     - name: Test with pytest
       run: |
+        # Force reinstall of setuptools<77.0 to avoid editable install bug (setuptools#4903)
+        pip install --force-reinstall "setuptools<77.0"
         pip install -e .
         pytest -W ignore -vv .
