fix pyproject.toml source directory search space - update pypi version to 0.5.3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ text = "MIT"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
