--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
@@ -32,8 +32,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip        
+        python -m pip install --upgrade pip
         pip install -r requirements.txt -r requirements-dev.txt
+
+    - name: Install Playwright browsers
+      run: python -m playwright install --with-deps
 
     - name: Test with pytest
       run: |
