--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ readme = "README.md"
 requires-python = ">=3.8"
 authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
 dependencies = [
-    "beautifulsoup4>=4.11.0",
-    "ipython>=8.5.0",
-    "Pillow>=9.2.0",
-    "python-dateutil>=2.8.0",
-    "requests>=2.28.0"
+    "beautifulsoup4>=4.11.0,<5.0.0",
+    "ipython>=8.5.0,<9.0.0",
+    "Pillow>=9.2.0,<11.0.0",
+    "python-dateutil>=2.8.0,<3.0.0",
+    "requests>=2.28.0,<3.0.0",
+    "playwright>=1.55.0,<2.0.0"
 ]
 classifiers = [
     "Intended Audience :: Developers",
@@ -24,6 +25,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries",
     "Topic :: Utilities"
 ]
