--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-beautifulsoup4
-ipython
-pillow
-python-dateutil
-requests
-playwright
+beautifulsoup4>=4.11.0,<5.0.0
+ipython>=8.5.0,<9.0.0
+pillow>=9.2.0,<11.0.0
+python-dateutil>=2.8.0,<3.0.0
+requests>=2.28.0,<3.0.0
+playwright>=1.55.0,<2.0.0
