--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ authors = [{ name = "Ira Horecka", email = "ira89@icloud.com" }]
 dependencies = [
     "beautifulsoup4>=4.11.0,<5.0.0",
     "ipython>=8.5.0,<9.0.0",
-    "Pillow>=9.2.0,<11.0.0",
+    "Pillow>=9.2.0,<12.0.0",
     "python-dateutil>=2.8.0,<3.0.0",
     "requests>=2.28.0,<3.0.0",
-    "playwright>=1.55.0,<2.0.0"
+    "playwright>1.41.0,<2.0.0"
 ]
 classifiers = [
     "Intended Audience :: Developers",
